lib/doctavious-cli/src/cmd/snapshots/doctavious_cli__cmd__til__tests__should_successfully_create_new_post.snap
---
source: lib/doctavious-cli/src/cmd/til.rs
expression: "fs::read_to_string(path).unwrap()"
---
---
date: [DATE]
tags: 
---
# Testing

