lib/doctavious-cli/src/cmd/snapshots/doctavious_cli__cmd__til__tests__should_successfully_init_global-3.snap
---
source: lib/doctavious-cli/src/cmd/til.rs
expression: "&config"
---
path: /Users/seancarroll/Library/Application Support/com.doctavious.cli/doctavious.toml
settings:
  til:
    dir: [DIR]
    template_format: md
is_default_settings: false

