lib/doctavious-cli/src/cmd/snapshots/doctavious_cli__cmd__til__tests__should_successfully_init_global-4.snap
---
source: lib/doctavious-cli/src/cmd/til.rs
expression: "fs::read_to_string(&config.path).unwrap()"
---
[til]
dir = "[DIR]"
template_format = "md"

