lib/doctavious-cli/src/cmd/snapshots/doctavious_cli__cmd__til__tests__should_successfully_init_global.snap
---
source: lib/doctavious-cli/src/cmd/til.rs
expression: "&config"
---
path: [CONFIG_PATH]/doctavious-test.toml
settings:
  til:
    dir: [DIR]
    template_format: md
is_default_settings: false
