lib/doctavious-cli/src/cmd/snapshots/doctavious_cli__cmd__til__tests__should_successfully_init_local.snap
---
source: lib/doctavious-cli/src/cmd/til.rs
expression: "fs::read_to_string(&files[0]).unwrap()"
---
[til]
template_format = "md"

